# generic-uvarint

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  lib.rs
